WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118951
REGRESSION(
r152227
) Images with layer backing don't show up unless the containing window is resized.
https://bugs.webkit.org/show_bug.cgi?id=118951
Summary
REGRESSION(r152227) Images with layer backing don't show up unless the contai...
Nightwatch
Reported
2013-07-21 01:35:05 PDT
BG Image doesn't show up initially. Only after resizing the browser window, the BG image shows source code: <!DOCTYPE html> <html> <head> <meta charset="utf-8"> <title>Persoonlijke website van Huub, Monique en Nick</title> <style> img.bg { /* Set rules to fill background */ min-height: 100%; min-width: 1024px; /* Set up proportionate scaling */ width: 100%; height: auto; /* Set up positioning */ position: fixed; top: 0; left: 0; } @media screen and (max-width: 1024px){ img.bg { left: 50%; margin-left: -512px; } } #page-wrap { position: relative; width: 400px; margin: 100px auto; padding: 40px; background: white; -moz-box-shadow: 0 0 20px black; -webkit-box-shadow: 0 0 20px black; box-shadow: 0 0 20px black; } p { font: 15px/2 Arial, Sans-serif; margin: 20 20 20 20; text-indent: 0px; ALIGN="center"; } </style> </head> <body> <img src="intro.jpg" class="bg"> <div id="page-wrap"> <p ALIGN="center"><b>Persoonlijke website van Huub, Monique en Nick<b></p> <p ALIGN="center"><img src="under-construction.jpg" border="1px"</p> </div> </body> </html>
Attachments
Patch
(3.59 KB, patch)
2013-07-22 03:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.18 KB, patch)
2013-07-22 06:11 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.17 KB, patch)
2013-07-22 11:45 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-07-22 03:08:02 PDT
patch is coming up.
alan
Comment 2
2013-07-22 03:45:39 PDT
Created
attachment 207237
[details]
Patch
alan
Comment 3
2013-07-22 06:11:26 PDT
Created
attachment 207242
[details]
Patch
Simon Fraser (smfr)
Comment 4
2013-07-22 10:38:10 PDT
Comment on
attachment 207242
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=207242&action=review
> Source/WebCore/ChangeLog:13 > + Ensure that the content rect is initialized when the image is set on the graphics layer. > + > + RenderLayerBacking::updateGraphicsLayerGeometry() only updates the contents rect when > + the associated graphics layer has a content layer. Since the positioned image > + gets committed on the graphics layer after the update calls, the contents rect > + is left uninitialized.
There should be regression information here.
> LayoutTests/compositing/images/positioned-image-content-rect.html:5 > + <img style="position: fixed; top:0px; left:0px;" width="214px" height="232px" src="../resources/apple.jpg">
A better way to get a composited image is to use -webkit-transfrom: translateZ(0). Not all platforms will enable compositing for fixed.
alan
Comment 5
2013-07-22 11:45:45 PDT
Created
attachment 207258
[details]
Patch
WebKit Commit Bot
Comment 6
2013-07-22 12:36:48 PDT
Comment on
attachment 207258
[details]
Patch Clearing flags on attachment: 207258 Committed
r152986
: <
http://trac.webkit.org/changeset/152986
>
WebKit Commit Bot
Comment 7
2013-07-22 12:36:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2013-07-23 10:13:05 PDT
<
rdar://problem/14522607
>
Alexey Proskuryakov
Comment 9
2013-09-17 16:07:41 PDT
This test is failing on some bots, filed
bug 121526
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug