REGRESSION(r152227) Images with compositing layer don't show up unless the containing window is resized. https://bugs.webkit.org/show_bug.cgi?id=118951

Patch by Zalan Bujtas <zalan@apple.com> on 2013-07-22
Reviewed by Simon Fraser.

Ensure that the content rect is initialized when the image is set on the graphics layer.

RenderLayerBacking::updateGraphicsLayerGeometry() only updates the contents rect when
the associated graphics layer has a content layer. Since the image gets committed
on the graphics layer after the update calls, the contents rect is left uninitialized.

Source/WebCore:

Test: compositing/images/positioned-image-content-rect.html

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateImageContents):

LayoutTests:

* compositing/images/positioned-image-content-rect-expected.html: Added.
* compositing/images/positioned-image-content-rect.html: Added.

Canonical link: https://commits.webkit.org/136817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152986 268f45cc-cd09-0410-ab3c-d52691b4dbfc